# commercemind

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  ci.md  datasets.md  deployment.md  monitoring.md  performance.md  project_showcase.md  results.md  synthetic_dataset.md
src/commercemind/: config.py  logging.py  main.py  schemas.py
src/commercemind/data/: datasets.py  generate_synthetic_dataset.py  ingest.py  pipeline.py  synthetic.py  transform.py
src/commercemind/evaluation/: benchmarks.py  experiments.py  performance.py  recommendation.py  retrieval.py  run_experiment.py  run_performance_benchmark.py
src/commercemind/monitoring/: __init__.py  metrics.py
src/commercemind/ranking/: __init__.py  features.py  learned.py  rankers.py  training.py
src/commercemind/recommendation/: __init__.py  candidates.py
src/commercemind/retrieval/: baseline.py  build_index.py  embeddings.py  hybrid.py  metrics.py  vector.py  vector_index.py
src/commercemind/services/: catalog.py  recommendations.py  sample_data.py  search.py
tests/: test_baseline_retrieval.py  test_benchmarks.py  test_build_index_cli.py  test_catalog_loader.py  test_ci_config.py  test_deployment_config.py  test_embeddings.py  test_health.py  test_hybrid_retrieval.py  test_ingest.py  test_learned_ranker.py  test_load_dataset.py  test_metrics_api.py  test_monitoring_metrics.py  test_offline_experiments.py  test_performance_benchmark.py  test_pipeline.py  test_project_showcase_docs.py  test_rankers.py  test_ranking_features.py  test_recommendation_api.py  test_recommendation_candidates.py  test_recommendation_evaluation.py  test_recommendation_service.py  test_retrieval_evaluation.py  test_retrieval_metrics.py  test_run_experiment_cli.py  test_search_api.py  test_search_service.py  test_storage_repositories.py  test_synthetic_dataset.py  test_train_ranker_cli.py  test_transform.py  test_vector_index.py  test_vector_retrieval.py
(+6 files in other folders)
