[project]
name = "commercemind"
version = "0.1.0"
description = "Advanced retrieval, ranking, and semantic search system for e-commerce product discovery."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Tanmay" }
]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "numpy>=1.26,<3.0",
  "polars>=1.2,<2.0",
  "pyarrow>=17.0,<18.0",
  "sentence-transformers>=3.0,<4.0",
  "faiss-cpu>=1.8,<2.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "structlog>=24.2,<25.0",
]

[project.scripts]
commercemind-evaluate = "commercemind.evaluation.run_experiment:main"
commercemind-seed-db = "commercemind.storage.load_dataset:main"
commercemind-build-index = "commercemind.retrieval.build_index:main"
commercemind-train-ranker = "commercemind.ranking.training:main"
commercemind-benchmark = "commercemind.evaluation.run_performance_benchmark:main"
commercemind-generate-synthetic = "commercemind.data.generate_synthetic_dataset:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.5,<0.6",
  "mypy>=1.10,<2.0",
  "pre-commit>=3.7,<4.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
mypy_path = "src"
